--- a/HTML/contact.html
+++ b/HTML/contact.html
@@ -5,13 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="style.css">
-    <title>About</title>
+    <link rel="stylesheet" href="../style.css">
+
+    <title>Contact</title>
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
-          <a class="navbar-brand" href="index.html"><img src="logo.png" id="logo" class="rounded float-end" alt="logo"></a>
+          <a class="navbar-brand" href="index.html"><img src="../logo.png" id="logo" class="rounded float-end" alt="logo"></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -21,7 +22,7 @@
                 <a class="nav-link" href="index.html">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page"  href="about.html">About</a>
+                <a class="nav-link" href="about.html">About</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="media.html">Media</a>
@@ -30,34 +31,12 @@
                 <a class="nav-link" href="faq.html">FAQ</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="contact.html">Contact</a>
+                <a class="nav-link active" aria-current="page" href="contact.html">Contact</a>
               </li>
             </ul>
           </div>
         </div>
       </nav>
-
-
-
-
-
-
-
-
-<div class="footer">
-    <div class="footerTitles">
-    <h3>Site navigation</h3>
-    <h3>Site navigation</h3>
-</div>
-      <ul>
-        <li class="footernav"><a href="index.html">Home</a></li>
-        <li class="footernav"><a href="about.html">About</a></li>
-        <li class="footernav"><a href="media.html">Media</a></li>
-        <li class="footernav"><a href="faq.html">FAQ</a></li>
-        <li class="footernav"><a href="contact.html">Contact</a></li>
-      </ul>
-    </div>
-
-
+    
 </body>
 </html>
