--- a/HTML/faq.html
+++ b/HTML/faq.html
@@ -11,7 +11,7 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
-          <a class="navbar-brand" href="index.html"><img src="../logo.png" id="logo" class="rounded float-end" alt="logo"></a>
+          <a class="navbar-brand" href="index.html"><img src="../logo.png" class="rounded logo float-end" alt="logo"></a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
