--- a/HTML/about.html
+++ b/HTML/about.html
@@ -6,7 +6,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css">
-  <link rel="stylesheet" href="../style.css">
+  <link rel="stylesheet" href="../css/header_footer.css">
+  <link rel="stylesheet" href="../css/about.css">
   <title>About</title>
 </head>
 
@@ -42,6 +43,56 @@
   </nav>
   <!--navbar-->
 
+  <div class="about">
+    <div class="descritption">
+      <img src="https://upload.wikimedia.org/wikipedia/commons/3/3b/MondoKayo07StChasC.jpg" alt="carnival">
+      <p>The holiday of Mardi Gras is celebrated in all of Louisiana, including the city of New Orleans. Celebrations
+        are concentrated for about two weeks before and through Shrove Tuesday, the day before Ash Wednesday (the start
+        of lent in the Western Christian tradition). Usually there is one major parade each day (weather permitting);
+        many days have several large parades. The largest and most elaborate parades take place the last five days of
+        the Mardi Gras season. In the final week, many events occur throughout New Orleans and surrounding communities,
+        including parades and balls (some of them masquerade balls).
+
+        The parades in New Orleans are organized by social clubs known as krewes; most follow the same parade schedule
+        and route each year. The earliest-established krewes were the Mistick Krewe of Comus, the earliest, Rex, the
+        Knights of Momus and the Krewe of Proteus. Several modern "super krewes" are well known for holding large
+        parades and events, such as the Krewe of Endymion (which is best known for naming celebrities as grand marshals
+        for their parades), the Krewe of Bacchus (similarly known for naming celebrities as their Kings), as well as the
+        Zulu Social Aid & Pleasure Club—a predominantly African American krewe. Float riders traditionally toss throws
+        into the crowds. The most common throws are strings of colorful plastic beads, doubloons, decorated plastic
+        "throw cups", Moon Pies, and small inexpensive toys. Major krewes follow the same parade schedule and route each
+        year.
+
+        While many tourists center their Carnival season activities on Bourbon Street, major parades originate in the
+        Uptown and Mid-City districts and follow a route along St. Charles Avenue and Canal Street, on the upriver side
+        of the French Quarter. Walking parades - most notably the Krewe du Vieux and Chewbacchus - also take place
+        downtown in the Faubourg Marigny and French Quarter in the weekends preceding Mardi Gras day. Mardi Gras day
+        traditionally concludes with the "Meeting of the Courts" between Rex and Comus.</p>
+    </div>
+    <div class="descritption">
+      <img src="https://www.mardigrasneworleans.com/constrain/1200/800/uploads/gallery/IMG6933_6219425e91c05.jpeg"
+        alt="carnival2">
+      <p>Cantrell returned to New Orleans in 1999, settling in the Broadmoor neighborhood. In 2003, she joined the board
+        of the Broadmoor Improvement Association and became president of the association in 2004. After the 2005
+        levee failures in Greater New Orleans following Hurricane Katrina, the Broadmoor neighborhood flooded severely
+        and remained mostly deserted for months afterward. In early 2006, the Bring New Orleans Back Commission, a
+        blue-ribbon panel convened by then-mayor Ray Nagin, released a recovery plan that called for Broadmoor and five
+        other New Orleans neighborhoods to be converted into greenspace. In her role as president of the
+        association, Cantrell worked with residents and local religious leaders to organize opposition to the panel's
+        recommendation. She also helped enlist returning Broadmoor residents in a six-month effort to write a recovery
+        plan for the neighborhood.
+
+        Cantrell worked full time to implement Broadmoor's recovery plan from 2006 through 2012. She and fellow
+        residents formed the Broadmoor School Board, overseeing the reopening and renovation of the Andrew H. Wilson
+        school. She served as a founding board member of the Broadmoor Development Corporation, a community
+        development corporation that provided case management and other social services for returning residents. She
+        was involved with residents' efforts to reopen Broadmoor's Rosa F. Keller Library, which won a $2 million grant
+        from the Carnegie Endowment. She created a partnership between the Broadmoor Improvement Association and
+        Church of the Annunciation, which provided the neighborhood association with office space and hosted volunteer
+        groups. She also formed a partnership between the Broadmoor Improvement Association and her home parish,
+        Blessed Trinity Catholic Church, to open the Broadmoor Art and Wellness Center.</p>
+    </div>
+  </div>
 
   <!-- Footer -->
   <footer class="bg-dark text-center text-white">
