--- a/HTML/media.html
+++ b/HTML/media.html
@@ -7,6 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="../css/header_footer.css">
+  <link rel="stylesheet" href="../css/media.css">
   <title>Media</title>
 </head>
 
@@ -42,6 +43,231 @@
     </div>
   </nav>
   <!--navbar-->
+  <!-- Modal gallery -->
+  <section class="galleryy">
+    <!-- Section: Images -->
+    <section class="">
+      <div class="row">
+        <div class="col-lg-4 col-md-12 mb-4 mb-lg-0">
+          <picture data-bs-toggle="modal" data-bs-target="#exampleModal1">
+            <source  srcset="https://www.mardigrasneworleans.com/constrain/1200/800/uploads/gallery/27470259551833103150655391379895754742150072n_62194ca7be460.jpg" type="image/svg+xml">
+             <img src="" class="img-fluid img-thumbnail" alt="...">
+          </picture>
+        </div>
+
+        <div class="col-lg-4 mb-4 mb-lg-0">
+          <picture data-bs-toggle="modal" data-bs-target="#exampleModal2">
+            <source  srcset="https://www.mardigrasneworleans.com/constrain/1200/800/uploads/gallery/27473563351833099750655737493273104719085035n_62194cadc1f05.jpg" type="image/svg+xml">
+             <img src="" class="img-fluid img-thumbnail" alt="...">
+          </picture>
+        </div>
+
+        <div class="col-lg-4 mb-4 mb-lg-0">
+          <picture data-bs-toggle="modal" data-bs-target="#exampleModal3">
+            <source  srcset="https://www.mardigrasneworleans.com/constrain/1200/800/uploads/gallery/dsc_0807.jpg" type="image/svg+xml">
+             <img src="" class="img-fluid img-thumbnail" alt="...">
+          </picture>
+      </div>
+    </section>
+    <section class="">
+      <div class="row">
+        <div class="col-lg-4 col-md-12 mb-4 mb-lg-0">
+          <picture data-bs-toggle="modal" data-bs-target="#exampleModal4">
+            <source  srcset="https://www.mardigrasneworleans.com/constrain/1200/800/uploads/gallery/58b92a4890111_1547066884.jpg" type="image/svg+xml">
+             <img src="" class="img-fluid img-thumbnail" alt="...">
+          </picture>
+        </div>
+
+        <div class="col-lg-4 mb-4 mb-lg-0">
+          <picture data-bs-toggle="modal" data-bs-target="#exampleModal5">
+            <source  srcset="https://www.mardigrasneworleans.com/constrain/1200/800/uploads/gallery/58b98fac8ce09_1547066906.jpg" type="image/svg+xml">
+             <img src="" class="img-fluid img-thumbnail" alt="...">
+          </picture>
+        </div>
+
+        <div class="col-lg-4 mb-4 mb-lg-0">
+          <picture data-bs-toggle="modal" data-bs-target="#exampleModal6">
+            <source  srcset="https://www.mardigrasneworleans.com/constrain/1200/800/uploads/gallery/58b924293d231_1547066981.jpg" type="image/svg+xml">
+             <img src="" class="img-fluid img-thumbnail" alt="...">
+          </picture>
+      </div>
+    </section>
+    <section class="">
+      <div class="row">
+        <div class="col-lg-4 col-md-12 mb-4 mb-lg-0">
+          <picture data-bs-toggle="modal" data-bs-target="#exampleModal7">
+            <source  srcset="https://www.mardigrasneworleans.com/constrain/1200/800/uploads/gallery/5315ff2276014_1547067049.jpg" type="image/svg+xml">
+             <img src="" class="img-fluid img-thumbnail" alt="...">
+          </picture>
+        </div>
+
+        <div class="col-lg-4 mb-4 mb-lg-0">
+          <picture data-bs-toggle="modal" data-bs-target="#exampleModal8">
+            <source  srcset="https://www.mardigrasneworleans.com/constrain/1200/800/uploads/gallery/580d78e5efeb7_1547067048.jpg" type="image/svg+xml">
+             <img src="" class="img-fluid img-thumbnail" alt="...">
+          </picture>
+        </div>
+
+        <div class="col-lg-4 mb-4 mb-lg-0">
+          <picture data-bs-toggle="modal" data-bs-target="#exampleModal9">
+            <source  srcset="https://www.mardigrasneworleans.com/constrain/1200/800/uploads/gallery/58b92684d9dee_1547066980.jpg" type="image/svg+xml">
+             <img src="" class="img-fluid img-thumbnail" alt="...">
+          </picture>
+      </div>
+    </section>
+    
+    <!-- Section: Images -->
+
+    <!-- Section: Modals -->
+      <!-- Modal 1 -->
+      <div class="modal fade" id="exampleModal1" tabindex="-1" aria-labelledby="exampleModal1Label" aria-hidden="true">
+        <div class="modal-dialog modal-lg">
+          <div class="modal-content">
+            <div class="modal-header">
+              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+              <picture>
+                <source srcset="https://www.mardigrasneworleans.com/constrain/1200/800/uploads/gallery/27470259551833103150655391379895754742150072n_62194ca7be460.jpg" type="image/svg+xml">
+                 <img src="" class="img-fluid img-thumbnail" alt="...">
+              </picture>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- Modal 2 -->
+      <div class="modal fade" id="exampleModal2" tabindex="-1" aria-labelledby="exampleModal2Label" aria-hidden="true">
+        <div class="modal-dialog modal-lg">
+          <div class="modal-content">
+            <div class="modal-header">
+              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+              <picture>
+                <source srcset="https://www.mardigrasneworleans.com/constrain/1200/800/uploads/gallery/27473563351833099750655737493273104719085035n_62194cadc1f05.jpg" type="image/svg+xml">
+                 <img src="" class="img-fluid img-thumbnail" alt="...">
+              </picture>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- Modal 3 -->
+      <div class="modal fade" id="exampleModal3" tabindex="-1" aria-labelledby="exampleModal3Label" aria-hidden="true">
+        <div class="modal-dialog modal-lg">
+          <div class="modal-content">
+            <div class="modal-header">
+              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+              <picture>
+                <source srcset="https://www.mardigrasneworleans.com/constrain/1200/800/uploads/gallery/dsc_0807.jpg" type="image/svg+xml">
+                 <img src="" class="img-fluid img-thumbnail" alt="...">
+              </picture>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- Modal 4 -->
+      <div class="modal fade" id="exampleModal4" tabindex="-1" aria-labelledby="exampleModal4Label" aria-hidden="true">
+        <div class="modal-dialog modal-lg">
+          <div class="modal-content">
+            <div class="modal-header">
+              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+              <picture>
+                <source srcset="https://www.mardigrasneworleans.com/constrain/1200/800/uploads/gallery/58b92a4890111_1547066884.jpg" type="image/svg+xml">
+                 <img src="" class="img-fluid img-thumbnail" alt="...">
+              </picture>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- Modal 5 -->
+      <div class="modal fade" id="exampleModal5" tabindex="-1" aria-labelledby="exampleModal2Labe5" aria-hidden="true">
+        <div class="modal-dialog modal-lg">
+          <div class="modal-content">
+            <div class="modal-header">
+              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+              <picture>
+                <source srcset="https://www.mardigrasneworleans.com/constrain/1200/800/uploads/gallery/58b98fac8ce09_1547066906.jpg" type="image/svg+xml">
+                 <img src="" class="img-fluid img-thumbnail" alt="...">
+              </picture>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- Modal 6 -->
+      <div class="modal fade" id="exampleModal6" tabindex="-1" aria-labelledby="exampleModal3Labe6" aria-hidden="true">
+        <div class="modal-dialog modal-lg">
+          <div class="modal-content">
+            <div class="modal-header">
+              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+              <picture>
+                <source srcset="https://www.mardigrasneworleans.com/constrain/1200/800/uploads/gallery/58b924293d231_1547066981.jpg" type="image/svg+xml">
+                 <img src="" class="img-fluid img-thumbnail" alt="...">
+              </picture>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- Modal 7 -->
+      <div class="modal fade" id="exampleModal7" tabindex="-1" aria-labelledby="exampleModal7Label" aria-hidden="true">
+        <div class="modal-dialog modal-lg">
+          <div class="modal-content">
+            <div class="modal-header">
+              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+              <picture>
+                <source srcset="https://www.mardigrasneworleans.com/constrain/1200/800/uploads/gallery/5315ff2276014_1547067049.jpg" type="image/svg+xml">
+                 <img src="" class="img-fluid img-thumbnail" alt="...">
+              </picture>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- Modal 8 -->
+      <div class="modal fade" id="exampleModal8" tabindex="-1" aria-labelledby="exampleModal2Labe8" aria-hidden="true">
+        <div class="modal-dialog modal-lg">
+          <div class="modal-content">
+            <div class="modal-header">
+              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+              <picture>
+                <source srcset="https://www.mardigrasneworleans.com/constrain/1200/800/uploads/gallery/580d78e5efeb7_1547067048.jpg" type="image/svg+xml">
+                 <img src="" class="img-fluid img-thumbnail" alt="...">
+              </picture>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- Modal 9 -->
+      <div class="modal fade" id="exampleModal9" tabindex="-1" aria-labelledby="exampleModal3Labe9" aria-hidden="true">
+        <div class="modal-dialog modal-lg">
+          <div class="modal-content">
+            <div class="modal-header">
+              <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+              <picture>
+                <source srcset="https://www.mardigrasneworleans.com/constrain/1200/800/uploads/gallery/58b92684d9dee_1547066980.jpg" type="image/svg+xml">
+                 <img src="" class="img-fluid img-thumbnail" alt="...">
+              </picture>
+            </div>
+          </div>
+        </div>
+      </div>
+
+
+    <!-- Section: Modals -->
+  </section>
+  <!-- Modal gallery -->
 
 
   <!-- Footer -->
@@ -172,6 +398,13 @@
     </div>
   </footer>
   <!-- Footer -->
+
+
+  <!-- JavaScript Bundle with Popper -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
+    crossorigin="anonymous"></script>
+    
 </body>
 
 </html>
