--- a/HTML/contact.html
+++ b/HTML/contact.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="../css/header_footer.css">
-
+  <script src="../JS/contact.js" defer></script>
   <title>Contact</title>
 </head>
 
@@ -42,6 +42,19 @@
     </div>
   </nav>
   <!--navbar-->
+
+  <!--Form-->
+
+  <form action="">
+    <input type="text" id="name" placeholder="Name">
+    <input type="text" id="lname" placeholder="Last Name">
+    <input type="text" id="email" placeholder="Email">
+    <Textarea id="area"></Textarea>
+
+    <button type="submit" onclick="enterDetails()">Enter details</button>
+  </form>
+
+  <!--Form-->
 
 
   <!-- Footer -->
