Now it's done :)

--- a/HTML/about.html
+++ b/HTML/about.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="../css/header_footer.css">
   <link rel="stylesheet" href="../css/about.css">
+  <link rel="icon" type="image/x-icon" href="../logo.png">
   <script src="../JS/headerfooter.js" defer></script>
   <title>About</title>
 </head>
@@ -17,6 +18,10 @@
   <!--navbar-->
 <div id="my-nav"></div>
   <!--navbar-->
+
+<div class="mybanner">
+  <h1>About</h1>
+</div>
 
   <div class="about">
     <div class="descritption">
