--- a/HTML/contact.html
+++ b/HTML/contact.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="../css/header_footer.css">
   <link rel="stylesheet" href="../css/contact.css">
+  <link rel="icon" type="image/x-icon" href="../logo.png">
   <script src="../JS/contact.js" defer></script>
   <script src="../JS/headerfooter.js" defer></script>
   <title>Contact</title>
@@ -20,6 +21,9 @@
   <div id="my-nav"></div>
   <!--navbar-->
 
+  <div class="mybanner">
+    <h1>Contact us</h1>
+  </div>
   <!--Form-->
 
   <form action="" id="my-form">
