--- a/HTML/faq.html
+++ b/HTML/faq.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="../css/header_footer.css">
   <link rel="stylesheet" href="../css/faq.css">
+  <link rel="icon" type="image/x-icon" href="../logo.png">
   <script src="../JS/headerfooter.js" defer></script>
   <title>FAQ</title>
 </head>
@@ -18,7 +19,9 @@
   <!--navbar-->
   <div id="my-nav"></div>
   <!--navbar-->
-
+  <div class="mybanner">
+    <h1>FAQ</h1>
+  </div>
   <!--Accordion-->
   <div class="accordion" id="accordionExample">
     <div class="accordion-item">
@@ -54,6 +57,42 @@
       <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
         <div class="accordion-body">
           Twelfth Night (aka, Twelfth Night, the Feast of the Epiphany and Three Kings' Day) is celebrated on January 6th in New Orleans and is the official start of Mardi Gras every year. While the date of Fat Tuesday changes, Twelfth Night does not. According to Wikipedia, different traditions mark the date of Twelfth Night as either January 5 or January 6 (it depends on whether they start counting the twelve days on December 25 or 26).
+        </div>
+      </div>
+    </div>
+    <div class="accordion-item">
+      <h2 class="accordion-header" id="headingFour">
+        <button class="accordion-button collapsed text-bg-dark bg-gradient" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseThree">
+          Where can I book a room with a balcony to watch the parades go by?
+        </button>
+      </h2>
+      <div id="collapseFour" class="accordion-collapse collapse" aria-labelledby="headingFour" data-bs-parent="#accordionExample">
+        <div class="accordion-body">
+          The best option is to reserve a package in the French Quarter or along the parade route that offers a balcony, food and a bathroom pass.
+        </div>
+      </div>
+    </div>
+    <div class="accordion-item">
+      <h2 class="accordion-header" id="headingFive">
+        <button class="accordion-button collapsed text-bg-dark bg-gradient" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFive" aria-expanded="false" aria-controls="collapseThree">
+          How much does it cost to go to Mardi Gras?
+        </button>
+      </h2>
+      <div id="collapseFive" class="accordion-collapse collapse" aria-labelledby="headingFive" data-bs-parent="#accordionExample">
+        <div class="accordion-body">
+          It's free! Not only that, but you'll leave with bags of Mardi Gras beads and throws. That's why we call it the "Greatest Free Show on Earth!"
+        </div>
+      </div>
+    </div>
+    <div class="accordion-item">
+      <h2 class="accordion-header" id="headingSix">
+        <button class="accordion-button collapsed text-bg-dark bg-gradient" type="button" data-bs-toggle="collapse" data-bs-target="#collapseSix" aria-expanded="false" aria-controls="collapseThree">
+          I only have limited time. What is the prime time to visit during Mardi Gras? 
+        </button>
+      </h2>
+      <div id="collapseSix" class="accordion-collapse collapse" aria-labelledby="headingSix" data-bs-parent="#accordionExample">
+        <div class="accordion-body">
+          The weekend before Fat Tuesday is the prime time to visit New Orleans for Mardi Gras. This is the weekend when Bacchus and Endymion, two of the biggest parades of the season, roll down the streets of New Orleans. The streets are packed all day Saturday and Sunday with parade watchers. If you can stay longer than a weekend, Monday (Lundi Gras) and Fat Tuesday are also great days to experience Mardi Gras. Orpheus, another big parade, rolls on that Monday night, and the Zulu Lundi Gras festival goes on all day. On Fat Tuesday, walking around the French Quarter and seeing all of the costumes and masks is a unique and thrilling experience.
         </div>
       </div>
     </div>
