--- a/HTML/index.html
+++ b/HTML/index.html
@@ -8,12 +8,14 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="../css/home.css">
   <link rel="stylesheet" href="../css/header_footer.css">
+  <link rel="icon" type="image/x-icon" href="../logo.png">
   <script src="../JS/headerfooter.js" defer></script>
   <title>Home</title>
 </head>
 
 <body>
   <input value="1" id="my-page" style="display:none ;">
+  
     <div id="my-nav">
   </div>
 
