--- a/HTML/media.html
+++ b/HTML/media.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css">
   <link rel="stylesheet" href="../css/header_footer.css">
   <link rel="stylesheet" href="../css/media.css">
+  <link rel="icon" type="image/x-icon" href="../logo.png">
   <script src="../JS/headerfooter.js" defer></script>
   <title>Media</title>
 </head>
@@ -19,6 +20,10 @@
   <!--navbar-->
     <div id="my-nav"></div>
   <!--navbar-->
+  <div class="mybanner">
+    <h1>Media</h1>
+  </div>
+
   <!-- Modal gallery -->
   <section class="galleryy">
     <!-- Section: Images -->
